--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AndroidCameraRecognitionText</string>
+    <string name="login">Login</string>
+    <string name="limpiar">Limpiar</string>
+    <string name="inicioSesion">Iniciar Sesión</string>
 </resources>
